# dddcli

./: AGENTS.md  CMakeLists.txt  HARDWARE_TESTS.md  HARDWARE_TEST_RESULTS.md  IMPLEMENTATION_PLAN.md  NOTICE  README.md  RELEASE_NOTES.md  dddcli.example.toml
docs/: AUTO_CAPTURE.md  CONFIG.md  HARDWARE_TESTS.md  PLAYER_CONTROL.md  Pioneer_CLD-V2600_and_CLD-V2400_Programmers_Reference_Guide.md  TROUBLESHOOTING.md  USB_CAPTURE_PERFORMANCE_TESTING.md
orig/: FUTURE_WORK_FINDINGS.md
src/: AutoCaptureOrchestration.cpp  AutoCaptureOrchestration.h  CaptureMetadata.cpp  CaptureMetadata.h  CliConfig.cpp  CliConfig.h  ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  ILogger.inl  PlayerSerial.cpp  PlayerSerial.h  ProgressLine.cpp  ProgressLine.h  StringUtilities.h  StringUtilities.inl  UsbDeviceBase.cpp  UsbDeviceBase.h  UsbDeviceLibUsb.cpp  UsbDeviceLibUsb.h  main.cpp
tests/: CliConfigTests.cpp
tests/manual/: HARDWARE_TESTS.md  HARDWARE_TEST_RESULTS.md  USB_CAPTURE_PERFORMANCE_TESTING.md
